Start to add ESPP

--- a/start.ipynb
+++ b/start.ipynb
@@ -248,6 +248,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Capital One ESPP\n",
+    "Hardcoded due to the temporary nature of the account."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### TD Statements\n",
     "Go to Trade Management > Order Status and export to csv the relevant period's transactions.\n",
     "\n",
