Added hardcode data for some accounts

--- a/start.ipynb
+++ b/start.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,8 +248,100 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Capital One ESPP\n",
-    "Hardcoded due to the temporary nature of the account."
+    "### Capital One ESPP & RRSP\n",
+    "Hardcoded due to the temporary nature of the account, and the lack of any export functionality.\n",
+    "See the attached Excel files for the hardcoded transaction lists."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Symbol</th>\n",
+       "      <th>Purchase Date</th>\n",
+       "      <th>Purchase Price</th>\n",
+       "      <th>Purchase Quantity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>COF</td>\n",
+       "      <td>2022-06-30</td>\n",
+       "      <td>104.19</td>\n",
+       "      <td>0.6332</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>COF</td>\n",
+       "      <td>2022-07-31</td>\n",
+       "      <td>109.83</td>\n",
+       "      <td>1.2086</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>COF</td>\n",
+       "      <td>2022-08-31</td>\n",
+       "      <td>105.82</td>\n",
+       "      <td>1.2225</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>COF</td>\n",
+       "      <td>2022-09-30</td>\n",
+       "      <td>92.17</td>\n",
+       "      <td>1.9989</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>COF</td>\n",
+       "      <td>2022-10-31</td>\n",
+       "      <td>106.02</td>\n",
+       "      <td>1.1760</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Symbol Purchase Date  Purchase Price  Purchase Quantity\n",
+       "0    COF    2022-06-30          104.19             0.6332\n",
+       "1    COF    2022-07-31          109.83             1.2086\n",
+       "2    COF    2022-08-31          105.82             1.2225\n",
+       "3    COF    2022-09-30           92.17             1.9989\n",
+       "4    COF    2022-10-31          106.02             1.1760"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cof_espp = pd.read_excel('Statements/COF-ESPP.xlsx')\n",
+    "cof_espp.head()"
    ]
   },
   {
@@ -257,7 +349,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cof_rrsp = pd.read_excel('Statements/COF-RRSP.xlsx')\n",
+    "cof_rrsp.head()"
+   ]
   },
   {
    "attachments": {},
@@ -755,188 +850,6 @@
    "source": [
     "df['Action'].drop_duplicates()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 200,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Action</th>\n",
-       "      <th>Symbol</th>\n",
-       "      <th>Description</th>\n",
-       "      <th>Quantity</th>\n",
-       "      <th>Price</th>\n",
-       "      <th>Gross Amount</th>\n",
-       "      <th>Commission</th>\n",
-       "      <th>Net Amount</th>\n",
-       "      <th>Currency</th>\n",
-       "      <th>Activity Type</th>\n",
-       "      <th>Account Type</th>\n",
-       "      <th>Transaction</th>\n",
-       "      <th>Settlement</th>\n",
-       "      <th>Account</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>M111916</td>\n",
-       "      <td>MACERICH CO NON-RES TAX WITHHELD REC 08/19/21 ...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>15.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.22</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>Dividends</td>\n",
-       "      <td>Individual TFSA</td>\n",
-       "      <td>2021-09-08</td>\n",
-       "      <td>2021-09-08</td>\n",
-       "      <td>#####724</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>M111916</td>\n",
-       "      <td>MACERICH CO DIST ON 10 SHS REC 08/19/21 PAY 09...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.15</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.50</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>Dividends</td>\n",
-       "      <td>Individual TFSA</td>\n",
-       "      <td>2021-09-08</td>\n",
-       "      <td>2021-09-08</td>\n",
-       "      <td>#####724</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>M111916</td>\n",
-       "      <td>MACERICH CO NON-RES TAX WITHHELD REC 05/07/21 ...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>15.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.22</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>Dividends</td>\n",
-       "      <td>Individual TFSA</td>\n",
-       "      <td>2021-06-03</td>\n",
-       "      <td>2021-06-03</td>\n",
-       "      <td>#####724</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>M111916</td>\n",
-       "      <td>MACERICH CO DIST ON 10 SHS REC 05/07/21 PAY 06...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.15</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.50</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>Dividends</td>\n",
-       "      <td>Individual TFSA</td>\n",
-       "      <td>2021-06-03</td>\n",
-       "      <td>2021-06-03</td>\n",
-       "      <td>#####724</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>M111916</td>\n",
-       "      <td>MACERICH CO NON-RES TAX WITHHELD REC 02/19/21 ...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>15.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.22</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>Dividends</td>\n",
-       "      <td>Individual TFSA</td>\n",
-       "      <td>2021-03-03</td>\n",
-       "      <td>2021-03-03</td>\n",
-       "      <td>#####724</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>M111916</td>\n",
-       "      <td>MACERICH CO DIST ON 10 SHS REC 02/19/21 PAY 03...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.15</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.50</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>Dividends</td>\n",
-       "      <td>Individual TFSA</td>\n",
-       "      <td>2021-03-03</td>\n",
-       "      <td>2021-03-03</td>\n",
-       "      <td>#####724</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Action   Symbol                                        Description  \\\n",
-       "31    NaN  M111916  MACERICH CO NON-RES TAX WITHHELD REC 08/19/21 ...   \n",
-       "32    NaN  M111916  MACERICH CO DIST ON 10 SHS REC 08/19/21 PAY 09...   \n",
-       "33    NaN  M111916  MACERICH CO NON-RES TAX WITHHELD REC 05/07/21 ...   \n",
-       "34    NaN  M111916  MACERICH CO DIST ON 10 SHS REC 05/07/21 PAY 06...   \n",
-       "35    NaN  M111916  MACERICH CO NON-RES TAX WITHHELD REC 02/19/21 ...   \n",
-       "36    NaN  M111916  MACERICH CO DIST ON 10 SHS REC 02/19/21 PAY 03...   \n",
-       "\n",
-       "    Quantity  Price  Gross Amount  Commission  Net Amount Currency  \\\n",
-       "31       0.0  15.00           0.0         0.0       -0.22      USD   \n",
-       "32       0.0   0.15           0.0         0.0        1.50      USD   \n",
-       "33       0.0  15.00           0.0         0.0       -0.22      USD   \n",
-       "34       0.0   0.15           0.0         0.0        1.50      USD   \n",
-       "35       0.0  15.00           0.0         0.0       -0.22      USD   \n",
-       "36       0.0   0.15           0.0         0.0        1.50      USD   \n",
-       "\n",
-       "   Activity Type     Account Type Transaction Settlement   Account  \n",
-       "31     Dividends  Individual TFSA  2021-09-08 2021-09-08  #####724  \n",
-       "32     Dividends  Individual TFSA  2021-09-08 2021-09-08  #####724  \n",
-       "33     Dividends  Individual TFSA  2021-06-03 2021-06-03  #####724  \n",
-       "34     Dividends  Individual TFSA  2021-06-03 2021-06-03  #####724  \n",
-       "35     Dividends  Individual TFSA  2021-03-03 2021-03-03  #####724  \n",
-       "36     Dividends  Individual TFSA  2021-03-03 2021-03-03  #####724  "
-      ]
-     },
-     "execution_count": 200,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "attachments": {},
@@ -1456,7 +1369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
