--- a/start.ipynb
+++ b/start.ipynb
@@ -149,7 +149,7 @@
    "source": [
     "### World Bank\n",
     "\n",
-    "Unlike other datareader sources, World Bank data is readily available as module from `pandas_datareader`.\n",
+    "Unlike other datareader sources, World Bank data is readily available as a module from `pandas_datareader`.\n",
     "\n",
     "Unfortunately many indicators don't have data for recent years."
    ]
@@ -346,9 +346,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Contributor</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Fund</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Member</td>\n",
+       "      <td>2023-06-07</td>\n",
+       "      <td>CC&amp;L Canadian Equity Fund</td>\n",
+       "      <td>1.74173</td>\n",
+       "      <td>38.1574</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Member</td>\n",
+       "      <td>2023-06-07</td>\n",
+       "      <td>MFS International Equity</td>\n",
+       "      <td>2.70899</td>\n",
+       "      <td>20.4467</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Member</td>\n",
+       "      <td>2023-06-07</td>\n",
+       "      <td>Blackrock US Equity Index</td>\n",
+       "      <td>1.40902</td>\n",
+       "      <td>55.0311</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Member</td>\n",
+       "      <td>2023-06-07</td>\n",
+       "      <td>PH&amp;N Core Plus Bond Fund</td>\n",
+       "      <td>1.66274</td>\n",
+       "      <td>10.6571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Member</td>\n",
+       "      <td>2023-06-07</td>\n",
+       "      <td>Sun Life GDIA</td>\n",
+       "      <td>4.45000</td>\n",
+       "      <td>0.0463</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Contributor       Date                       Fund  Quantity    Price\n",
+       "0      Member 2023-06-07  CC&L Canadian Equity Fund   1.74173  38.1574\n",
+       "1      Member 2023-06-07   MFS International Equity   2.70899  20.4467\n",
+       "2      Member 2023-06-07  Blackrock US Equity Index   1.40902  55.0311\n",
+       "3      Member 2023-06-07   PH&N Core Plus Bond Fund   1.66274  10.6571\n",
+       "4      Member 2023-06-07              Sun Life GDIA   4.45000   0.0463"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cof_rrsp = pd.read_excel('Statements/COF-RRSP.xlsx')\n",
     "cof_rrsp.head()"
